<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015,2016 Annie Hui @ NVCC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentToolMem2L_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mem2L_t2"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_light"
            />
        <EditText
            android:id="@+id/fragmentToolMem2L_T2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:layout_margin="0dp"
            android:textColor="@color/text_light"
            android:background="@drawable/tool_input_active"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mem2L_t1"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_light"
            />
        <EditText
            android:id="@+id/fragmentToolMem2L_T1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:layout_margin="0dp"
            android:textColor="@color/text_light"
            android:background="@drawable/tool_input_active"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mem2L_h"
            android:layout_margin="6dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/text_light"
            />
        <EditText
            android:id="@+id/fragmentToolMem2L_h"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:layout_margin="0dp"
            android:textColor="@color/text_light"
            android:background="@drawable/tool_input_active"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp"
        >
        <TextView
            android:id="@+id/fragmentToolMem2L_alert"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/tool_screen"
            android:textColor="@color/text_error"
            android:lines="1"
            />
        <Button
            android:id="@+id/fragmentToolMem2L_buttonPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mem2L_parallel"
            android:textColor="@color/text_dark"
            android:background="@drawable/tool_keypad_active"
            />
        <Button
            android:id="@+id/fragmentToolMem2L_buttonSeq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mem2L_sequential"
            android:textColor="@color/text_dark"
            android:background="@drawable/tool_keypad_active"
            />
        <Button
            android:id="@+id/fragmentToolMem2L_buttonScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_dark"
            android:background="@drawable/tool_keypad_active"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentToolMem2L_seekbarPlaceholder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        />




</LinearLayout>
    
