<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015,2016 Annie Hui @ NVCC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentToolArithInt_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_black"
    >


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/tool_screen"
        >

        <TableRow
            android:id="@+id/fragmentToolArithInt_tableRow0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_0"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_1"
                android:text="@string/label_carry"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_2"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_3"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_4"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_5"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_6"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_7"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_8"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_9"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_10"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_0_11"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
        </TableRow>

        <TableRow
            android:id="@+id/fragmentToolArithInt_tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_0"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_1"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_2"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_3"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_4"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_5"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_6"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_7"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_8"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_9"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_10"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_1_11"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
        </TableRow>

        <TableRow
            android:id="@+id/fragmentToolArithInt_tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_0"
                android:text="@string/label_plus"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_1"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_2"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_3"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_4"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_5"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_6"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_7"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_8"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_9"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_10"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_2_11"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
        </TableRow>
        
        <View
            android:layout_height="2dip"
            android:background="@color/text_light" />
        
        <TableRow
            android:id="@+id/fragmentToolArithInt_tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_0"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_1"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_2"
                android:text="@string/label_blank"
                android:layout_gravity="right"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_3"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_4"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_5"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_6"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_7"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_8"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_9"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_10"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/textsize_normal"
                />
            <TextView
                android:id="@+id/fragmentToolArithInt_cell_3_11"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/label_blank"
                android:textColor="@color/text_light"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/textsize_normal"
                />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/fragmentToolArithInt_number1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/tool_input_active"
            android:inputType="numberSigned"
            android:textColor="@color/text_light"
            />

        <EditText
            android:id="@+id/fragmentToolArithInt_number2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/tool_input_active"
            android:inputType="numberSigned"
            android:textColor="@color/text_light"
            />
    </LinearLayout>

</LinearLayout>
    
